--- a/src/guosh.pc.in
+++ b/src/guosh.pc.in
@@ -1,5 +1,5 @@
 Name: guosh
-Description: A simple stderr logger
-Version: 0.2.0
+Description: A simple logger for C/++
+Version: 0.2.1
 Libs: -L${CMAKE_INSTALL_PREFIX}/lib -lguosh -lstdc++
 Cflags: -I${CMAKE_INSTALL_PREFIX}/include
